# ros-3d-vision-guided-robotic-arm-control

./: README.md
marm_description/: CMakeLists.txt  package.xml
marm_description/launch/: display.launch
marm_description/rviz/: urdf.rviz
marm_description/urdf/: marm_simple.xacro
marm_gazebo/config/: marm_gazebo_controllers.yaml  marm_gazebo_joint_states.yaml  trajectory_controllers.yaml  trajectory_controllers（复件）.yaml
marm_gazebo/launch/: marm_bringup_moveit.launch  marm_gazebo_states.launch  marm_gazebo_test.launch  marm_trajectory_controller.launch  world.launch
marm_gazebo/urdf/: camera.xacro  gripper.xacro  marm_robot.xacro  simple_cube.urdf  simple_cylinder.urdf  suction_cup.xacro  table.urdf
marm_gazebo/worlds/: table_world.world
marm_moveit_config/: .setup_assistant  package.xml
marm_moveit_config/config/: controllers.yaml  fake_controllers.yaml  gazebo_marm.urdf  joint_limits.yaml  marm.srdf  ompl_planning.yaml
marm_moveit_config/launch/: demo.launch  gazebo.launch  marm_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  planning_context.launch  ros_controllers.launch
marm_vision/: CMakeLists.txt  package.xml  setup.py
marm_vision/scripts/: arm_controller.py  back_home.py  cloud_processor.py  grasp_hold.py  gripper_test.py  marm_grasp.py  move_n90.py  move_test.py  move_z.py  visual_grasp.py  visual_grasp_test.py
src/marm_description/urdf/: marm_simple.xacro
src/marm_gazebo/: CMakeLists.txt  package.xml
src/marm_gazebo/config/: trajectory_controllers.yaml
src/marm_gazebo/launch/: marm_bringup_moveit.launch  marm_gazebo_control.launch  marm_gazebo_controller.launch  marm_trajectory_controller.launch  test.launch  world.launch
src/marm_gazebo/urdf/: marm_robot.xacro
src/marm_moveit_config/: package.xml
src/marm_moveit_config/config/: controllers.yaml  fake_controllers.yaml  gazebo_marm.urdf  marm.srdf
src/marm_moveit_config/launch/: fake_moveit_controller_manager.launch.xml  gazebo.launch  marm_moveit_controller_manager.launch.xml  (+6 more)
