<?xml version="1.0"?>
<package format="2">
  <name>marm_description</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for MARM robot
    This package contains configuration data, 3D models and launch files
    for MARM robot
  </description>
  <author>SerenAzuma</author>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- 运行依赖（使用<depend>标签，它等同于build+exec依赖） -->
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
 
  <depend>gazebo</depend> 

  <depend>xacro</depend>
  
  <export>
    <!-- 指定包是架构无关的（纯资源包） -->
    <architecture_independent />
  </export>
</package>
