<?xml version="1.0"?>
<package format="2">
  <name>marm_gazebo</name>
  <version>1.0.0</version>
  <description>
      Gazebo simulation package for MARM robot arm
  </description>
  <maintainer email="1565676825@qq.com">your_name</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>position_controllers</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>xacro</depend>
</package>
